// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle />  should match snapshot with checked prop 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  position: relative;
  pointer-events: none;
}

.c3 {
  cursor: pointer;
  display: inline-block;
  height: 24px;
  padding-left: 40px;
}

.c3:before {
  background-color: #999999;
  border-radius: 16px;
  content: '';
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 42px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,-webkit-transform 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
}

.c1 {
  cursor: pointer;
  height: 24px;
  left: 0;
  opacity: 0;
  position: absolute;
  pointer-events: initial;
  width: 100%;
}

.c1:focus + .c2:before {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
}

.c1:hover + .c2:before {
  background-color: #424242;
}

.c1:checked + .c2:before {
  background-color: #1250C4;
}

.c1:checked:hover + .c2:before {
  background-color: #002F7B;
}

<div
    class="c0"
  >
    <input
      checked=""
      class="c1"
      role="switch"
      type="checkbox"
    />
    <div
      class="c2 c3"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Toggle />  should match snapshot without props 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  position: relative;
  pointer-events: none;
}

.c3 {
  cursor: pointer;
  display: inline-block;
  height: 24px;
  padding-left: 40px;
}

.c3:before {
  background-color: #999999;
  border-radius: 16px;
  content: '';
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 42px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,-webkit-transform 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
}

.c1 {
  cursor: pointer;
  height: 24px;
  left: 0;
  opacity: 0;
  position: absolute;
  pointer-events: initial;
  width: 100%;
}

.c1:focus + .c2:before {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
}

.c1:hover + .c2:before {
  background-color: #424242;
}

.c1:checked + .c2:before {
  background-color: #1250C4;
}

.c1:checked:hover + .c2:before {
  background-color: #002F7B;
}

<div
    class="c0"
  >
    <input
      class="c1"
      role="switch"
      type="checkbox"
    />
    <div
      class="c2 c3"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
